--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "dpb",
-  "version": "0.0.0",
-  "private": true,
-  "author": "Allen",
-  "description": "sysbot",
+  "name": "slack-hubot-apigateway",
+  "version": "1.0.0",
+  "author": "UCSB Developers",
+  "description": "ApiGateway Hubot (@apibot) for ucsbtech Slack workspace",
   "dependencies": {
+    "apigee-auth": "^1.0.0",
+    "axios": "^0.18.0",
+    "cross-spawn": "^6.0.5",
     "dotenv": "^6.0.0",
     "hubot": "^2.19.0",
     "hubot-auth": "^2.1.0",
@@ -17,7 +19,8 @@
     "hubot-scripts": "^2.17.2",
     "hubot-slack": "^4.5.0",
     "hubot-slack-utils": "0.0.5",
-    "jobot-brain-file": "^1.0.1"
+    "jobot-brain-file": "^1.0.1",
+    "rxjs": "^6.2.1"
   },
   "engines": {
     "node": "8.x.x"
