--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@slack/client": "^4.3.1",
     "apigee-auth": "^1.0.0",
     "axios": "^0.18.0",
+    "console.table": "^0.10.0",
     "cross-spawn": "^6.0.5",
     "dotenv": "^6.0.0",
     "hubot": "^2.19.0",
