--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "console.table": "^0.10.0",
     "cross-spawn": "^6.0.5",
+    "date-fns": "^1.29.0",
     "dotenv": "^6.0.0",
     "hubot": "^2.19.0",
     "hubot-auth": "^2.1.0",
