--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,36 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"type": "node",
+			"request": "launch",
+			"name": "node",
+			"program": "${file}"
+		},
+		{
+			"type": "node",
+			"request": "launch",
+			"name": "Jest All",
+			"program": "${workspaceFolder}/node_modules/.bin/jest",
+			"args": ["--runInBand"],
+			"console": "integratedTerminal",
+			"internalConsoleOptions": "neverOpen",
+			"windows": {
+				"program": "${workspaceFolder}/node_modules/jest/bin/jest",
+			}
+		},
+			{
+			"type": "node",
+			"request": "launch",
+			"name": "Jest Current File",
+			"program": "${workspaceFolder}/node_modules/.bin/jest",
+			"args": ["${relativeFile}"],
+			"console": "integratedTerminal",
+			"internalConsoleOptions": "neverOpen",
+			"windows": {
+				"program": "${workspaceFolder}/node_modules/jest/bin/jest",
+			}
+		},
+		{
 			"type": "PowerShell",
 			"request": "launch",
 			"name": "PowerShell Launch Current File",
