move nodegit to non devDependency

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hubot-slack": "^4.5.0",
     "hubot-slack-utils": "0.0.5",
     "jobot-brain-file": "^1.0.1",
+    "nodegit": "^0.24.1",
     "right-pad": "^1.0.1",
     "rxjs": "^6.2.1",
     "thenby": "^1.2.6"
@@ -36,7 +37,6 @@
     "test": "jest"
   },
   "devDependencies": {
-    "jest": "^23.6.0",
-    "nodegit": "^0.24.1"
+    "jest": "^23.6.0"
   }
 }
